--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "request": "^2.88.2"
+    "netlify-lambda": "^2.0.16",
+    "request": "^2.88.2",
+    "serverless-http": "^3.2.0"
   }
 }
